--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,8 @@
 <body>
   <header class="page-header">
 
-    <img class="page-logo" src="#" alt="Логотип Седона">
+
+    <img class="page-logo" src="images/page-logo.svg" width="139" height="70" alt="Логотип Седона">
 
     <nav class="navigation">
       <ul class="navigation-list">
@@ -21,7 +22,6 @@
           <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
-
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href="#">
@@ -39,15 +39,13 @@
       </ul>
     </nav>
   </header>
-
   <main class="main-inner">
     <header class="inner-header">
       <h1 class="inner-header-title">Гостиницы Седоны</h1>
-
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">
-            <img class="breadcrumbs-icon" src="#" alt="Главная">
+
             <span class="visually-hidden">Главная</span>
           </a>
         </li>
@@ -56,11 +54,9 @@
         </li>
       </ul>
     </header>
-
       <section class="catalog-hotel">
         <h2 class="visually-hidden">Поиск по фильтрам</h2>
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-
         <fieldset class="catalog-filter-group">
           <legend class="catalog-filter-title">Инфраструктура</legend>
           <ul class="catalog-filter-list">
@@ -84,7 +80,6 @@
             </li>
           </ul>
         </fieldset>
-
         <fieldset class="catalog-filter-group">
           <legend class="catalog-filter-title">Тип жилья</legend>
           <ul class="catalog-filter-list">
@@ -108,38 +103,34 @@
             </li>
           </ul>
         </fieldset>
-
         <fieldset class="catalog-filter-group">
           <legend class="catalog-filter-title">Стоимость, ₽:</legend>
         </fieldset>
-
           <button class="button" type="submit">Применить</button>
           <button class="button-reset" type="reset">Сбросить</button>
         </form>
-
         <p>Найдено гостиниц: 38</p>
-
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвое</option>
         </select>
 
         <a class="button" href="#">
-          <img class="button-icon" src="#" alt="Показать карточки">
+
           <span class="visually-hidden">Показать карточки</span>
         </a>
         <a class="button" href="#">
-          <img class="button-icon" src="#" alt="Показать слайдшоу">
+
           <span class="visually-hidden">Показать слайдшоу</span>
         </a>
         <a class="button" href="#" >
-          <img class="button-icon" src="#" alt="Показать список">
+
           <span class="visually-hidden">Показать список</span>
         </a>
 
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Amara Resort & Spa">
+              <img class="hotel-card-image" src="images/hotel-amara.jpg" width="299" height="206" alt="Amara Resort & Spa">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
             <span class="hotel-card-type">Гостиница</span>
@@ -150,8 +141,7 @@
             <span class="hotel-card-rating">Рейтинг: 8,5</span>
           </li>
           <li class="hotel-card">
-            <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Desert Quail Inn">
+              <img class="hotel-card-image" src="images/hotel-desert.jpg" width="299" height="206" alt="Desert Quail Inn">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
             <span class="hotel-card-type">Гостиница</span>
@@ -163,7 +153,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="Villas at Poco Diablo">
+              <img class="hotel-card-image" src="images/hotel-villas.jpg" width="299" height="206" alt="Villas at Poco Diablo">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
             <span class="hotel-card-type">Гостиница</span>
@@ -175,7 +165,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="#" alt="GreenTree Inn">
+              <img class="hotel-card-image" src="images/hotel-green-tree.jpg" width="299" height="206" alt="GreenTree Inn">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
             <span class="hotel-card-type">Гостиница</span>
@@ -186,9 +176,7 @@
             <span class="hotel-card-rating">Рейтинг: 9,2</span>
           </li>
         </ul>
-
         <button class="button pagination-show-more" type="button">Загрузить ещё</button>
-
         <ul class="pagination">
           <li class="pagination-item">
             <a class="pagination-link pagination-current">1</a>
@@ -209,17 +197,14 @@
             <a class="pagination-link" href="#">10</a>
           </li>
         </ul>
-
         <span>Гостиниц на странице:</span>
         <select class="select-control" aria-label="Количество гостиниц">
           <option value="4">4</option>
         </select>
       </section>
-
       <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <label for="newsletter-email">
               <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
@@ -228,7 +213,6 @@
         </form>
       </section>
   </main>
-
   <footer class="page-footer">
     <section class="footer-social">
       <h2 class="visually-hidden">Социальные сети</h2>
@@ -250,15 +234,15 @@
         </li>
       </ul>
     </section>
-
     <section class="footer-contacts">
       <h2 class="visually-hidden">Контакты</h2>
       <address class="footer-contacts-address">
         <a class="footer-contacts-address-phone" href="tel:781281212128">+7 (812) 812-12-128</a>
       </address>
     </section>
-
-      <a class="htmlacademy-logo" href="https://htmlacademy.ru/"><img src="#" alt="Логотип HTML Academy"></a>
+      <a class="htmlacademy-logo" href="https://htmlacademy.ru/">
+        <img src="images/logo_htmlacademy.svg" width="115" height="34" alt="Логотип HTML Academy">
+      </a>
   </footer>
 </body>
 </html>
