--- a/catalog.html
+++ b/catalog.html
@@ -137,48 +137,56 @@
                 <img class="hotel-card-image" src="images/hotel-amara.jpg" width="299" height="206" alt="Amara Resort & Spa">
                 <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               </a>
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 4000 ₽</span>
-              <a class="hotel-card-button button" href="#">Подробнее</a>
-              <button class="hotel-card-button button" type="button">В избранное</button>
-              <span class="hotel-card-stars">****</span>
-              <span class="hotel-card-rating">Рейтинг: 8,5</span>
+              <div class="hotel-card-content">
+                <span class="hotel-card-type">Гостиница</span>
+                <span class="hotel-card-price">От 4000 ₽</span>
+                <a class="hotel-card-button button" href="#">Подробнее</a>
+                <button class="hotel-card-button button" type="button">В избранное</button>
+                <span class="hotel-card-stars"></span>
+                <span class="hotel-card-rating">Рейтинг: 8,5</span>
+              </div>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/hotel-desert.jpg" width="299" height="206" alt="Desert Quail Inn">
                 <h3 class="hotel-card-title">Desert Quail Inn</h3>
               </a>
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 3000 ₽</span>
-              <a class="hotel-card-button button" href="#">Подробнее</a>
-              <button class="hotel-card-button button" type="button">В избранное</button>
-              <span class="hotel-card-stars">***</span>
-              <span class="hotel-card-rating">Рейтинг: 8,9</span>
+               <div class="hotel-card-content">
+                <span class="hotel-card-type">Гостиница</span>
+                <span class="hotel-card-price">От 3000 ₽</span>
+                <a class="hotel-card-button button" href="#">Подробнее</a>
+                <button class="hotel-card-button button" type="button">В избранное</button>
+                <span class="hotel-card-stars"></span>
+                <span class="hotel-card-rating">Рейтинг: 8,9</span>
+              </div>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/hotel-villas.jpg" width="299" height="206" alt="Villas at Poco Diablo">
                 <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
               </a>
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 2000 ₽</span>
-              <a class="hotel-card-button button" href="#">Подробнее</a>
-              <button class="hotel-card-button button" type="button">В избранное</button>
-              <span class="hotel-card-stars">**</span>
-              <span class="hotel-card-rating">Рейтинг: 9,2</span>
+               <div class="hotel-card-content">
+                <span class="hotel-card-type">Гостиница</span>
+                <span class="hotel-card-price">От 2000 ₽</span>
+                <a class="hotel-card-button button" href="#">Подробнее</a>
+                <button class="hotel-card-button button" type="button">В избранное</button>
+                <span class="hotel-card-stars"></span>
+                <span class="hotel-card-rating">Рейтинг: 9,2</span>
+              </div>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/hotel-green-tree.jpg" width="299" height="206" alt="GreenTree Inn">
                 <h3 class="hotel-card-title">GreenTree Inn</h3>
               </a>
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 3000 ₽</span>
-              <a class="hotel-card-button button" href="#">Подробнее</a>
-              <button class="hotel-card-button button" type="button">В избранное</button>
-              <span class="hotel-card-stars">**</span>
-              <span class="hotel-card-rating">Рейтинг: 9,2</span>
+               <div class="hotel-card-content">
+                <span class="hotel-card-type">Гостиница</span>
+                <span class="hotel-card-price">От 3000 ₽</span>
+                <a class="hotel-card-button button" href="#">Подробнее</a>
+                <button class="hotel-card-button button" type="button">В избранное</button>
+                <span class="hotel-card-stars"></span>
+                <span class="hotel-card-rating">Рейтинг: 9,2</span>
+              </div>
             </li>
           </ul>
            <div class="pagination-show-more-wrapper">
